-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.6.0
-
None
-
Windows, jom 1.0.12
-
95150aae29d1660c36e96d22b87b84c1120733db
foo: @echo Creating <<foo bar baz boo FOO += bar <<KEEP
Error: macro name FOO + is invalid in Makefile line 2
Works with nmake
For Gerrit Dashboard: QTCREATORBUG-8452 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
43825,1 | ignore macro assignments in inline files | master | qt-labs/jom | Status: MERGED | +2 | 0 |