ignore macro assignments in inline files

FOO=BAR in an inline file is not supposed to alter FOO.

Task-number: QTCREATORBUG-8452
Change-Id: I3ce0d6fc89a10b6062903fd9e8d769375e811a18
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>